jenkins-k8s/tp2_infra_et_app/tp2_monsterstack_deploy_multienv/k8s/overlays/prod/monstericon-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: monstericon
  labels:
    app: monsterstack
spec:
  type: NodePort
  ports:
  - port: 9090
