jenkins-k8s/tp2_infra_et_app/tp2_monsterstack_deploy_multienv/k8s/overlays/prod/monstericon-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monster-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: monstericon.<votrenom>.vagrantk3s.dopl.uk 
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: monstericon
                port:
                  number: 9090
